Changed color cell and added icon in Map Item Bar

--- a/TransportList/Main.storyboard
+++ b/TransportList/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6Pe-rG-F8c">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="6Pe-rG-F8c">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -28,7 +28,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="d5J-dW-XGP" id="c4c-3J-84S" customClass="TransportTableViewCell">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42Q-Ng-rHV">
@@ -47,6 +47,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.50058105005654818" green="0.70566171006208334" blue="0.70869090025906734" alpha="0.24282020246478872" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="company" destination="7da-7R-AaB" id="f7V-ea-H5Q"/>
                                             <outlet property="model" destination="42Q-Ng-rHV" id="DVx-4k-qg3"/>
@@ -68,7 +69,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ola-uC-qgH">
-                        <barButtonItem key="rightBarButtonItem" title="Map" id="YrV-pO-Ecq">
+                        <barButtonItem key="rightBarButtonItem" image="sample-881-globe.png" id="YrV-pO-Ecq">
                             <connections>
                                 <segue destination="7xs-PA-XyN" kind="show" id="4oi-kf-Ico"/>
                             </connections>
@@ -197,4 +198,7 @@
             <point key="canvasLocation" x="178" y="79"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sample-881-globe.png" width="28" height="28"/>
+    </resources>
 </document>
