Created Unit/UI tests

--- a/TransportList/Main.storyboard
+++ b/TransportList/Main.storyboard
@@ -20,15 +20,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mf6-Ia-VtI">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="black" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mf6-Ia-VtI">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Transport" id="d5J-dW-XGP" customClass="TransportTableViewCell">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="d5J-dW-XGP" id="c4c-3J-84S" customClass="TransportTableViewCell">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="42Q-Ng-rHV">
@@ -47,7 +47,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.50058105005654818" green="0.70566171006208334" blue="0.70869090025906734" alpha="0.24282020246478872" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="company" destination="7da-7R-AaB" id="f7V-ea-H5Q"/>
                                             <outlet property="model" destination="42Q-Ng-rHV" id="DVx-4k-qg3"/>
@@ -69,7 +69,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ola-uC-qgH">
-                        <barButtonItem key="rightBarButtonItem" image="sample-881-globe.png" id="YrV-pO-Ecq">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="sample-881-globe.png" id="YrV-pO-Ecq">
                             <connections>
                                 <segue destination="7xs-PA-XyN" kind="show" id="4oi-kf-Ico"/>
                             </connections>
@@ -98,12 +98,13 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4y1-9e-lJZ">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="delegate" destination="7xs-PA-XyN" id="9C4-s4-Rsh"/>
                                 </connections>
                             </mapView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="4y1-9e-lJZ" firstAttribute="top" secondItem="9bv-3i-32b" secondAttribute="bottom" id="2c0-xm-Til"/>
                             <constraint firstAttribute="trailing" secondItem="4y1-9e-lJZ" secondAttribute="trailing" id="Dfv-au-9hQ"/>
@@ -133,7 +134,7 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kl1-mz-HN4">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="OsZ-Uc-nsr" detailTextLabel="8kk-dY-T8I" rowHeight="54" style="IBUITableViewCellStyleSubtitle" id="sVf-ZF-eoZ">
                                         <rect key="frame" x="0.0" y="28" width="375" height="54"/>
@@ -158,6 +159,7 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -166,7 +168,7 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.60948941619999997" green="0.85918822459999999" blue="0.86287645729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Kl1-mz-HN4" firstAttribute="top" secondItem="xnP-eC-UWE" secondAttribute="bottom" id="DID-K4-g1g"/>
                             <constraint firstItem="KZ7-tv-HEy" firstAttribute="top" secondItem="Kl1-mz-HN4" secondAttribute="bottom" id="SS2-KD-qKU"/>
